<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.phuentemann.www.lampcontrol.esp8266">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/espTextView"
        android:layout_below="@+id/graph"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="250dip"
        android:id="@+id/graph"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:stretchColumns="0,1"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esp_button_auto"
                android:id="@+id/espButtonAuto"
                android:layout_column="0"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esp_button_clear"
                android:id="@+id/espButtonClear"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esp_button_refresh"
                android:id="@+id/espButtonRefresh"
                android:layout_column="0"
                android:layout_span="2" />
        </TableRow>

    </TableLayout>

</RelativeLayout>