<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".HomeScreen">

        <TextView
            android:text="@string/lampcontrol_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/textView1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="21dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lamp_0_title"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView1"
                android:layout_alignRight="@+id/textView1"
                android:layout_marginRight="15dp"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lamp_1_title"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView5"
                android:layout_alignRight="@+id/textView1"
                android:layout_marginRight="15dp"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lamp_2_title"
                android:id="@+id/textView3"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lamp_3_title"
                android:id="@+id/textView4"
                android:layout_row="3"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_an"
                android:id="@+id/button7"
                android:maxWidth="30dp"
                android:layout_below="@+id/textView2"
                android:layout_alignRight="@+id/textView1"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="sendCommand"
                android:tag="Licht0=An"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_aus"
                android:id="@+id/button8"
                android:maxWidth="30dp"
                android:layout_below="@+id/button"
                android:layout_alignRight="@+id/textView1"
                android:layout_row="0"
                android:layout_column="2"
                android:onClick="sendCommand"
                android:tag="Licht0=Aus"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_an"
                android:id="@+id/button"
                android:maxWidth="30dp"
                android:layout_below="@+id/textView2"
                android:layout_alignRight="@+id/textView1"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="sendCommand"
                android:tag="Licht1=An"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_aus"
                android:id="@+id/button2"
                android:maxWidth="30dp"
                android:layout_below="@+id/button"
                android:layout_alignRight="@+id/textView1"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="sendCommand"
                android:tag="Licht1=Aus"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_an"
                android:id="@+id/button3"
                android:maxWidth="30dp"
                android:layout_below="@+id/textView2"
                android:layout_alignRight="@+id/textView1"
                android:layout_row="2"
                android:layout_column="1"
                android:onClick="sendCommand"
                android:tag="Licht2=An"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_aus"
                android:id="@+id/button4"
                android:maxWidth="30dp"
                android:layout_below="@+id/textView2"
                android:layout_alignRight="@+id/textView1"
                android:layout_row="2"
                android:layout_column="2"
                android:onClick="sendCommand"
                android:tag="Licht2=Aus"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_an"
                android:id="@+id/button5"
                android:maxWidth="30dp"
                android:layout_below="@+id/textView2"
                android:layout_alignRight="@+id/textView1"
                android:layout_row="3"
                android:layout_column="1"
                android:onClick="sendCommand"
                android:tag="Licht3=An"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_aus"
                android:id="@+id/button6"
                android:maxWidth="30dp"
                android:layout_below="@+id/textView2"
                android:layout_alignRight="@+id/textView1"
                android:layout_row="3"
                android:layout_column="2"
                android:onClick="sendCommand"
                android:tag="Licht3=Aus"/>

        </GridLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeee"/>

</android.support.v4.widget.DrawerLayout>

